<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regestration">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGITSTER "
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="579dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/hint4"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="161dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="230dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="384dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="234dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="@string/hint7"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="466dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="229dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/hint5"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="232dp" />

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="230dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="306dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="86dp"
        android:layout_height="46dp"
        android:onClick="backMain"
        android:text="Back"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="6dp" />
</androidx.constraintlayout.widget.ConstraintLayout>